tests/invalid/invalid_unwrap_context.pith
fn maybe(n: Int) -> Int?:
    if n > 0:
        return n
    return none

fn main():
    val := maybe(3)?
    print(val.to_string())
